--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -1,3 +1,5 @@
+/* 基本構成 */
+/*
 h1{
     margin-top: 10px;
     margin-bottom: 5px;
@@ -6,3 +8,62 @@ h1{
     text-align: center;
     font-size: 22px;
 }
+body {
+    margin: 0px 0px 40px 0px;
+    -webkit-text-size-adjust: 100%;
+}
+*/
+
+/* リンク系 */
+/*
+a:visited {
+    color: #000;
+}
+a:hover{
+    color: #302f3d;
+    text-decoration: none;
+}
+*/
+
+/* ドロワー系 */
+/*.drawer-nav {*/
+    /*color: #fff;*/
+    /*background-color: #000;*/
+    /*padding: 10px;*/
+/*}*/
+
+/* ドロワーリンク系 */
+/*.drawer-nav a{*/
+    /*color: #fff;*/
+    /*text-decoration: none;*/
+/*}*/
+/*.drawer-nav a:visited{*/
+    /*color: #fff;*/
+/*}*/
+/*.drawer-nav a:hover{*/
+    /*color: #302f3d;*/
+    /*text-decoration: none;*/
+/*}*/
+
+/* ドロワードロップダウン系 */
+/*.drawer-dropdown-menu {*/
+    /*background-color: #000;*/
+    /*padding-left: 24px;*/
+    /*padding-left: 1.5rem;*/
+/*}*/
+
+/* ボタン系 */
+/*
+.btn {
+    border-radius: 0px;
+}
+.btn.btn-primary{
+    color:#ffffff!important;
+    background-color:#000;
+    text-shadow:0 -1px 0 rgba(0, 0, 0, 0.25);
+    border-color:#0000;
+}
+.btn-primary {
+    border-color: #000;
+}
+*/
