--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -1,13 +1,22 @@
 /* 基本構成 */
-/*
+.title{
+    text-align: center;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.container{
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
 h1{
     margin-top: 10px;
     margin-bottom: 5px;
+    font-size: 25px;
 }
-.title{
-    text-align: center;
-    font-size: 22px;
-}
+
+/*
 body {
     margin: 0px 0px 40px 0px;
     -webkit-text-size-adjust: 100%;
