--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -1,4 +1,8 @@
 /* 基本構成 */
+body {
+    font-family: 'Avenir Next', 'Helvetica Neue', sans-serif;
+    margin: 0;
+}
 .title{
     text-align: center;
     padding-top: 10px;
